--- a/dev/install
+++ b/dev/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-pip install -U pip wheel
-pip install -U setuptools
+pip install -U pip
+pip install -U wheel setuptools
 pip install -U -r dev/requirements-dev.txt
 pip install -U -r dev/requirements.txt
