--- a/dev/install
+++ b/dev/install
@@ -3,4 +3,6 @@
 pip install -U pip
 pip install -U wheel setuptools
 pip install -U -r dev/requirements-dev.txt
+pip install -U -r dev/requirements-test.txt
+pip install -U -r dev/requirements-docs.txt
 pip install -U -r dev/requirements.txt
